--- a/rospirski.cfg
+++ b/rospirski.cfg
@@ -69,6 +69,9 @@ volume "0.6"
 // Alterar Volume Voz
 bind "c" "toggle voice_scale 0.4 0.1"
 
+// Alterar Width HUD
+bind "f8" "toggle safezonex 1 0.75"
+
 // Mutar Todas as vozes
 bind "h" "toggle voice_enable 1 0"
 
@@ -127,14 +130,7 @@ bind "o" "+bombfind"
 // cl_clanid 36093358
 
 // Tags de clã ao andar
-// bind "w" "+forward;cl_clanid 11852253"
-// bind "s" "+back;cl_clanid 11852305"
-// bind "d" "+moveright;cl_clanid 11852289"
-// bind "a" "+moveleft;cl_clanid 11852271"
-bind "w" "+forward;cl_clanid 36025540"
-bind "a" "+moveleft;cl_clanid 36025542"
-bind "d" "+moveright;cl_clanid 36025543"
-bind "s" "+back;cl_clanid 36025544"
+exec "tagcla02.cfg"
 
 //NetGrap no Tab
 alias "+scorenet" "+showscores; net_graphheight 0"
@@ -142,7 +138,7 @@ alias "-scorenet" "-showscores; net_graphheight 9999"
 bind "TAB" "+scorenet"
 
 // Configurações do Crosshair
-cl_crosshair_drawoutline "1"
+cl_crosshair_drawoutline "0"
 cl_crosshair_dynamic_maxdist_splitratio "0.0"
 cl_crosshair_dynamic_splitalpha_innermod "0"
 cl_crosshair_dynamic_splitalpha_outermod "0.300000"
@@ -165,8 +161,10 @@ cl_crosshairsize 2
 cl_crosshairthickness 0
 
 // Alias das 3 miras (Mira 1, mira 2 e mira smoke)
+// Backup Mira Bolinha
+//alias "crosshair_2" "alias crosshair_atual crosshair_2; alias crosshair_mudar crosshair_1; cl_crosshairgap -5.5; cl_crosshairsize 1; cl_crosshairstyle 4"
 alias "crosshair_1" "alias crosshair_atual crosshair_1; alias crosshair_mudar crosshair_2; cl_crosshairgap -1; cl_crosshairsize 2; cl_crosshairstyle 4"
-alias "crosshair_2" "alias crosshair_atual crosshair_2; alias crosshair_mudar crosshair_1; cl_crosshairgap -5.5; cl_crosshairsize 1; cl_crosshairstyle 4"
+alias "crosshair_2" "alias crosshair_atual crosshair_2; alias crosshair_mudar crosshair_1; cl_crosshairgap -2; cl_crosshairsize 1; cl_crosshairstyle 4"
 alias "crosshair_smoke" "cl_crosshairgap -7;cl_crosshairsize 4000;cl_crosshairstyle 5;"
 alias "crosshair_atual" "crosshair_1"
 
@@ -201,6 +199,12 @@ crosshair_1
 // Desativar filtro de sensura
 cl_filtertext_enabled 0
 
+// Fps Background 
+engine_no_focus_sleep "0"
+
+// Bind Ping Botão
+bind "v" "player_ping"
+
 // Binds VR
 alias "VRkey1a" "say www.twitch.tv/botecovr"
 alias "VRkey1b" "say_team www.twitch.tv/botecovr"
@@ -213,17 +217,17 @@ alias "VRkey2k1" "bind PGUP VRkey2a"
 alias "VRkey2k2" "bind PGUP VRkey2b"
 
 alias "VRkey3a" "say ( ͡ °  ͜ʖ ͡ ° )"
-alias "VRkey3b" "say_team "
+alias "VRkey3b" "exec tagclandefault.cfg"
 alias "VRkey3k1" "bind KP_END VRkey3a"
 alias "VRkey3k2" "bind KP_END VRkey3b"
 
 alias "VRkey4a" "say ( ͡⚆ ͜ʖ ͡⚆)╭∩╮"
-alias "VRkey4b" "say_team "
+alias "VRkey4b" "exec tagcla01.cfg"
 alias "VRkey4k1" "bind KP_DOWNARROW VRkey4a"
 alias "VRkey4k2" "bind KP_DOWNARROW VRkey4b"
 
 alias "VRkey5a" "say ¯\_(ツ)_/¯"
-alias "VRkey5b" "say_team "
+alias "VRkey5b" "exec tagcla02.cfg"
 alias "VRkey5k1" "bind KP_PGDN VRkey5a"
 alias "VRkey5k2" "bind KP_PGDN VRkey5b"
 
@@ -282,4 +286,4 @@ alias "+VRKeys" "VRkey1k2;VRkey2k2;VRkey3k2;VRkey4k2;VRkey5k2;VRkey6k2;VRkey7k2;
 bind "KP_INS" "+VRKeys"
 -VRKeys
 
-host_writeconfig 
+host_writeconfig
