--- a/config.cfg
+++ b/config.cfg
@@ -70,7 +70,6 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "crosshair_mudar"
 bind "MOUSE4" "+voicerecord"
-bind "MOUSE5" "+crosshair_smoke"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
 @panorama_debug_overlay_opacity "0.8"
@@ -107,8 +106,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1611529746"
-cachedvalue_count_teammates "1611529759"
+cachedvalue_count_partybrowser "1612924942"
+cachedvalue_count_teammates "1612927776"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -136,7 +135,7 @@ cl_buywheel_nomousecentering "0"
 cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "39195799 33"
+cl_clanid "39195816 11"
 cl_cmdrate "128"
 cl_color "255 255 255"
 cl_compass_enabled "1"
@@ -201,6 +200,7 @@ cl_mute_enemy_team "0"
 cl_obs_interp_enable "1"
 cl_observed_bot_crosshair "0"
 cl_observercrosshair "1"
+cl_parachute_autodeploy "1"
 cl_ping_fade_deadzone "60"
 cl_ping_fade_distance "300"
 cl_player_ping_mute "0"
@@ -247,11 +247,11 @@ cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "1"
 cl_show_observer_crosshair "1"
 cl_showhelp "0"
-cl_showloadout "0"
+cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "5"
+cl_spec_mode "4"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
 cl_teammate_colors_show "1"
@@ -386,10 +386,10 @@ password "GC7643"
 play_distance "1"
 player_botdifflast_s "2"
 player_competitive_maplist_2v2_9_1_EB331822 "mg_de_vertigo,mg_de_inferno,mg_de_overpass,mg_de_cbble,mg_de_train,mg_de_shortnuke,mg_de_shortdust"
-player_competitive_maplist_8_9_1_73271C88 "mg_de_inferno"
+player_competitive_maplist_8_9_1_73271C88 "mg_de_inferno,mg_de_overpass,mg_de_vertigo,mg_de_dust2"
 player_nevershow_communityservermessage "0"
 player_survival_list_9_1_B "mg_dz_blacksite,mg_dz_sirocco,mg_dz_frostbite"
-player_teamplayedlast "3"
+player_teamplayedlast "2"
 player_wargames_list2_9_1_E04 "mg_skirmish_armsrace,mg_skirmish_demolition,mg_skirmish_flyingscoutsman"
 player_wargames_retakes_list_9_1_E04 "mg_skirmish_retakes"
 r_drawmodelstatsoverlaymax "1.5"
@@ -485,7 +485,7 @@ ui_deepstats_toplevel_mode "0"
 ui_inventorysettings_recently_acknowledged ""
 ui_mainmenu_bkgnd_movie_C5E107D7 "random"
 ui_nearbylobbies_filter3 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2021/01/32529/"
+ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2021/01/32686/"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
@@ -525,7 +525,7 @@ voice_positional "0"
 voice_scale "0.4"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.3"
+volume "0.1"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
