--- a/padrao.cfg
+++ b/padrao.cfg
@@ -148,7 +148,6 @@ cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
-cl_filtertext_enabled "1"
 cl_fixedcrosshairgap "3"
 cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
@@ -378,7 +377,7 @@ snd_roundend_volume "0"
 snd_roundstart_volume "0"
 snd_surround_speakers "-1"
 snd_tensecondwarning_volume "0"
-sound_device_override ""
+sound_device_override "{0.0.0.00000000}.{c07d0c78-28ed-4bc1-9b8e-dddeed0051ee}"
 spec_replay_autostart "1"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
@@ -413,7 +412,6 @@ trusted_launch "1"
 trusted_launch_once "0"
 tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_mainmenu_bkgnd_movie2 "mutiny"
 ui_nearbylobbies_filter3 "competitive"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
@@ -426,7 +424,7 @@ ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "casual"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
-ui_popup_weaponupdate_version "0"
+ui_popup_weaponupdate_version "3"
 ui_setting_advertiseforhire_auto "1"
 ui_setting_advertiseforhire_auto_last "/competitive"
 ui_steam_overlay_notification_position "topleft"
@@ -444,7 +442,6 @@ voice_enable "1"
 voice_forcemicrecord "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
-voice_mixer_volume "1.0"
 voice_modenable "1"
 voice_positional "0"
 voice_scale "1.0"
@@ -461,3 +458,15 @@ xbox_throttlebias "100"
 xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
 zoom_sensitivity_ratio_mouse "1.0"
+cl_buywheel_donate_key "0"
+cl_disable_round_end_report "0"
+cl_parachute_autodeploy "1"
+cl_ping_fade_deadzone "60"
+cl_ping_fade_distance "300"
+mat_enable_uber_shaders "1"
+ui_mainmenu_bkgnd_movie_C5E107D7 "random"
+ui_playsettings_maps_listen_skirmish_retakes "mg_skirmish_retakes"
+ui_playsettings_mode_official_v20 "competitive"
+ui_popup_weaponupdate_version "2"
+ui_vanitysetting_loadoutslot_ct "heavy0"
+ui_vanitysetting_loadoutslot_t "heavy4"
