--- a/rospirski.cfg
+++ b/rospirski.cfg
@@ -14,7 +14,10 @@ echo "                                                 Arquivo de Configuração
 exec padrao
 
 // Mensagem 
-echo "- Ativando Configurações VRospirski"
+echo "- Ativando Configurações Rospirski"
+
+// Volume Microfone
+voice_mixer_volume "0.6"
 
 // Remover Intro Operação
 ui_popup_weaponupdate_version "2"
@@ -40,7 +43,7 @@ cl_showhelp "0"
 cl_autohelp "0"
 
 // Ping Máximo Aceitavel
-mm_dedicated_search_maxping "40"
+mm_dedicated_search_maxping "25"
 
 // Limite de Rate
 rate "786432"
@@ -199,9 +202,6 @@ bind "q" "crosshairLasInfo"
 echo "- Ativando Mira Padrão 1"
 crosshair_1
 
-// Desativar filtro de sensura
-cl_filtertext_enabled 0
-
 // Fps Background 
 engine_no_focus_sleep "0"
 
@@ -253,7 +253,7 @@ alias "VRkey8k1" "bind KP_RIGHTARROW VRkey8a"
 alias "VRkey8k2" "bind KP_RIGHTARROW VRkey8b"
 
 alias "VRkey9a" "say Ah! Agora eu entendi! Agora eu saquei, agora todas as peças se encaixaram! Eu estou entendo tudo agora."
-alias "VRkey9b" "say_team "
+alias "VRkey9b" "say ♿ - preciso ir andando"
 alias "VRkey9k1" "bind KP_HOME VRkey9a"
 alias "VRkey9k2" "bind KP_HOME VRkey9b"
 
@@ -268,7 +268,7 @@ alias "VRkey11k1" "bind KP_PGUP VRkey11a"
 alias "VRkey11k2" "bind KP_PGUP VRkey11b"
 
 alias "VRkey12a" "say ⑳ ✩ coldzera: na minha epoca cara ruim não dava say"
-alias "VRkey12b" "say_team "
+alias "VRkey12b" "say Eu poderia falar que usa mira é um cancer... Mas o cancer pelo menos mata."
 alias "VRkey12k1" "bind KP_SLASH VRkey12a"
 alias "VRkey12k2" "bind KP_SLASH VRkey12b"
 
