--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,4 @@
+cfgver "1"
 unbindall
 bind "0" "slot10"
 bind "1" "crosshairSlot1"
@@ -106,8 +107,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1612924942"
-cachedvalue_count_teammates "1612927776"
+cachedvalue_count_partybrowser "1621117192"
+cachedvalue_count_teammates "1621117192"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -135,7 +136,7 @@ cl_buywheel_nomousecentering "0"
 cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "39195816 11"
+cl_clanid "39195820 14"
 cl_cmdrate "128"
 cl_color "255 255 255"
 cl_compass_enabled "1"
@@ -155,9 +156,9 @@ cl_crosshaircolor_b "50"
 cl_crosshaircolor_g "250"
 cl_crosshaircolor_r "50"
 cl_crosshairdot "0"
-cl_crosshairgap "-2"
+cl_crosshairgap "-1"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "1"
+cl_crosshairsize "2"
 cl_crosshairstyle "4"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
@@ -251,7 +252,7 @@ cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "4"
+cl_spec_mode "5"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
 cl_teammate_colors_show "1"
@@ -359,10 +360,10 @@ mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
-mm_dedicated_search_maxping "40"
+mm_dedicated_search_maxping "25"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "Pepinho"
+name "Rospirski"
 net_allow_multicast "1"
 net_graph "1"
 net_graphheight "9999"
@@ -382,16 +383,15 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "GC7643"
+password "GC8854"
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_9_1_EB331822 "mg_de_vertigo,mg_de_inferno,mg_de_overpass,mg_de_cbble,mg_de_train,mg_de_shortnuke,mg_de_shortdust"
-player_competitive_maplist_8_9_1_73271C88 "mg_de_inferno,mg_de_overpass,mg_de_vertigo,mg_de_dust2"
+player_competitive_maplist_2v2_9_0_24235B08 "mg_de_vertigo,mg_de_inferno,mg_de_cbble,mg_de_train,mg_de_shortdust"
+player_competitive_maplist_8_9_0_5C054B51 "mg_de_mirage"
 player_nevershow_communityservermessage "0"
-player_survival_list_9_1_B "mg_dz_blacksite,mg_dz_sirocco,mg_dz_frostbite"
+player_survival_list_9_0_B "mg_dz_blacksite,mg_dz_sirocco,mg_dz_frostbite"
 player_teamplayedlast "2"
-player_wargames_list2_9_1_E04 "mg_skirmish_armsrace,mg_skirmish_demolition,mg_skirmish_flyingscoutsman"
-player_wargames_retakes_list_9_1_E04 "mg_skirmish_retakes"
+player_wargames_list2_9_0_E04 "mg_skirmish_retakes"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "1"
@@ -431,7 +431,7 @@ snd_menumusic_volume "0.010265"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.025"
-snd_music_selection "2"
+snd_music_selection "1"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.010385"
 snd_mute_losefocus "0"
@@ -442,7 +442,7 @@ snd_roundend_volume "0.003115"
 snd_roundstart_volume "0.006231"
 snd_surround_speakers "-1"
 snd_tensecondwarning_volume "0.051154"
-sound_device_override ""
+sound_device_override "{0.0.0.00000000}.{c07d0c78-28ed-4bc1-9b8e-dddeed0051ee}"
 spec_replay_autostart "1"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
@@ -459,7 +459,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_cs15_daylight03_hdr"
+sv_skyname "sky_dust"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -483,15 +483,14 @@ ui_deepstats_radio_heat_tab "0"
 ui_deepstats_radio_heat_team "0"
 ui_deepstats_toplevel_mode "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_mainmenu_bkgnd_movie_C5E107D7 "random"
+ui_mainmenu_bkgnd_movie_8C5FB98B "ancient"
 ui_nearbylobbies_filter3 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2021/01/32686/"
+ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2021/05/34038/"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
 ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
 ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
-ui_playsettings_maps_listen_skirmish_retakes "mg_skirmish_retakes"
 ui_playsettings_maps_official_casual "mg_casualsigma"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
 ui_playsettings_maps_workshop ""
@@ -501,10 +500,11 @@ ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
 ui_popup_weaponupdate_version "2"
 ui_setting_advertiseforhire_auto "1"
-ui_setting_advertiseforhire_auto_last "competitive"
+ui_setting_advertiseforhire_auto_last "/competitive"
+ui_show_subscription_alert "1"
 ui_steam_overlay_notification_position "topleft"
 ui_vanitysetting_loadoutslot_ct "heavy0"
-ui_vanitysetting_loadoutslot_t "smg2"
+ui_vanitysetting_loadoutslot_t "heavy4"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
 viewmodel_fov "60"
@@ -519,13 +519,13 @@ voice_enable "1"
 voice_forcemicrecord "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
-voice_mixer_volume "1.0"
+voice_mixer_volume "0.6"
 voice_modenable "1"
 voice_positional "0"
 voice_scale "0.4"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.1"
+volume "0.6"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
