--- a/config.cfg
+++ b/config.cfg
@@ -107,8 +107,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1621117192"
-cachedvalue_count_teammates "1621117192"
+cachedvalue_count_partybrowser "1634081298"
+cachedvalue_count_teammates "1634081283"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -136,7 +136,7 @@ cl_buywheel_nomousecentering "0"
 cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "39195820 14"
+cl_clanid "0"
 cl_cmdrate "128"
 cl_color "255 255 255"
 cl_compass_enabled "1"
@@ -163,10 +163,10 @@ cl_crosshairstyle "4"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
-cl_detail_avoid_force "0.4"
-cl_detail_avoid_radius "64"
-cl_detail_avoid_recover_speed "0.25"
-cl_detail_max_sway "5"
+cl_detail_avoid_force "0"
+cl_detail_avoid_radius "0"
+cl_detail_avoid_recover_speed "0"
+cl_detail_max_sway "0"
 cl_disable_round_end_report "0"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "0"
@@ -176,7 +176,6 @@ cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
 cl_fixedcrosshairgap "0"
-cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
 cl_hide_avatar_images ""
@@ -252,7 +251,7 @@ cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "5"
+cl_spec_mode "0"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
 cl_teammate_colors_show "1"
@@ -331,7 +330,7 @@ joystick "1"
 joystick_force_disabled "1"
 joystick_force_disabled_set_from_options "1"
 key_bind_version "5"
-lobby_default_privacy_bits2 "1"
+lobby_default_privacy_bits2 "0"
 lockMoveControllerRet "0"
 lookspring "0"
 lookstrafe "0"
@@ -386,12 +385,12 @@ option_speed_method "0"
 password "GC8854"
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_9_0_24235B08 "mg_de_vertigo,mg_de_inferno,mg_de_cbble,mg_de_train,mg_de_shortdust"
-player_competitive_maplist_8_9_0_5C054B51 "mg_de_mirage"
+player_competitive_maplist_2v2_10_1_8B1DA40F "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_de_ravine,mg_de_extraction,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
+player_competitive_maplist_8_10_1_62D24D31 "mg_lobby_mapveto,mg_de_mirage,mg_de_inferno,mg_de_overpass,mg_de_vertigo,mg_de_nuke,mg_de_ancient,mg_de_dust2,mg_de_train,mg_de_cache,mg_cs_agency,mg_cs_office,mg_de_basalt,mg_cs_insertion2"
 player_nevershow_communityservermessage "0"
-player_survival_list_9_0_B "mg_dz_blacksite,mg_dz_sirocco,mg_dz_frostbite"
-player_teamplayedlast "2"
-player_wargames_list2_9_0_E04 "mg_skirmish_retakes"
+player_survival_list_10_1_13 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_county"
+player_teamplayedlast "3"
+player_wargames_list2_10_1_E04 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition,mg_skirmish_retakes"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "1"
@@ -459,7 +458,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_dust"
+sv_skyname "sky_urb01"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -483,25 +482,43 @@ ui_deepstats_radio_heat_tab "0"
 ui_deepstats_radio_heat_team "0"
 ui_deepstats_toplevel_mode "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_mainmenu_bkgnd_movie_8C5FB98B "ancient"
+ui_mainmenu_bkgnd_movie_53A07E69 "county"
 ui_nearbylobbies_filter3 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2021/05/34038/"
+ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2021/09/35481/"
+ui_playsettings_custom_preset "mg_de_mirage,mg_de_inferno,mg_de_overpass,mg_de_vertigo,mg_de_nuke,mg_de_ancient,mg_de_dust2,mg_de_train,mg_de_cache,mg_cs_agency,mg_cs_office,mg_de_basalt,mg_cs_insertion2"
+ui_playsettings_directchallengekey ""
+ui_playsettings_flags_listen_casual "0"
+ui_playsettings_flags_listen_competitive "0"
+ui_playsettings_flags_listen_cooperative "0"
+ui_playsettings_flags_listen_deathmatch "0"
+ui_playsettings_flags_listen_scrimcomp2v2 "0"
+ui_playsettings_flags_listen_skirmish "0"
+ui_playsettings_flags_listen_survival "0"
+ui_playsettings_flags_official_casual "0"
+ui_playsettings_flags_official_competitive "0"
+ui_playsettings_flags_official_cooperative "0"
+ui_playsettings_flags_official_deathmatch "0"
+ui_playsettings_flags_official_scrimcomp2v2 "0"
+ui_playsettings_flags_official_skirmish "0"
+ui_playsettings_flags_official_survival "0"
 ui_playsettings_maps_listen_casual "random_classic"
-ui_playsettings_maps_listen_competitive "random_classic"
+ui_playsettings_maps_listen_competitive "mg_de_mirage"
 ui_playsettings_maps_listen_deathmatch "random_classic"
 ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
 ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
 ui_playsettings_maps_official_casual "mg_casualsigma"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
-ui_playsettings_maps_workshop ""
-ui_playsettings_mode_listen "casual"
+ui_playsettings_maps_workshop "@workshop/308490450/xhair_v3"
+ui_playsettings_mode_listen "competitive"
 ui_playsettings_mode_official_v20 "competitive"
+ui_playsettings_prime "1"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
-ui_popup_weaponupdate_version "2"
+ui_popup_weaponupdate_version "2109"
 ui_setting_advertiseforhire_auto "1"
 ui_setting_advertiseforhire_auto_last "/competitive"
 ui_show_subscription_alert "1"
+ui_show_unlock_competitive_alert ""
 ui_steam_overlay_notification_position "topleft"
 ui_vanitysetting_loadoutslot_ct "heavy0"
 ui_vanitysetting_loadoutslot_t "heavy4"
@@ -522,7 +539,7 @@ voice_mixer_mute "0"
 voice_mixer_volume "0.6"
 voice_modenable "1"
 voice_positional "0"
-voice_scale "0.4"
+voice_scale "0.04"
 voice_system_enable "1"
 voice_threshold "4000"
 volume "0.6"
