--- a/trustedlaunch.cfg
+++ b/trustedlaunch.cfg
@@ -1,1 +1,10 @@
 SUCCESS:0x9
+3,3,16276,0x1d7bfc1,0x152ae290
+~C:\Program Files\Nahimic\Nahimic2\UserInterface\Nahimic2DevProps.dll
+GXS:;TFL:0F000000;TFC:2C010000;TAS:00000000;FAS:00000000;PVC:A0689500;DTR:0000AE774000AE778000AE77;DTF:E049B97700F4E77660DEFE76;SWD:91331111
+~C:\Program Files\Nahimic\Nahimic2\UserInterface\Nahimic2OSD.dll
+GXS:;TFL:10000000;TFC:37010000;TAS:00000000;FAS:00000000;PVC:A0689500;DTR:0000AE774000AE778000AE77;DTF:E049B97700F4E77660DEFE76;SWD:91331111
+~C:\Program Files (x86)\Kaspersky Lab\Kaspersky Anti-Virus 21.3\antimalware_provider.dll
+GXS:;TFL:6C000000;TFC:610D0000;TAS:00000000;FAS:00000000;PVC:A0689500;DTR:0000AE774000AE778000AE77;DTF:E049B97700F4E77660DEFE76;SWD:91331111
+~C:\Users\valdi\AppData\Local\Discord\app-1.0.9003\modules\discord_hook-1\discord_hook\2b6f62ed4f4\DiscordHook.dll
+GXS:;TFL:81000000;TFC:68100000;TAS:00000000;FAS:00000000;PVC:A0689500;DTR:0000AE774000AE778000AE77;DTF:E049B97700F4E77660DEFE76;SWD:91331111
