--- a/rospirski.cfg
+++ b/rospirski.cfg
@@ -109,7 +109,7 @@ cl_join_advertise "2"
 hud_scaling "0.8"
 
 // Sensibilidade do Mouse
-sensitivity "1.80"
+sensitivity "2"
 
 // Arma na mão Esquerda e Bind alterar lado da arma
 cl_righthand "0"
@@ -163,44 +163,46 @@ cl_fixedcrosshairgap "0"
 cl_crosshairalpha "255"
 cl_crosshair_outlinethickness "1"
 cl_crosshairdot 0
-cl_crosshairsize 2
 cl_crosshairthickness 0
+cl_crosshairgap -3
+cl_crosshairsize 1
+cl_crosshairstyle 4
 
 // Alias das 3 miras (Mira 1, mira 2 e mira smoke)
 // Backup Mira Bolinha
 //alias "crosshair_2" "alias crosshair_atual crosshair_2; alias crosshair_mudar crosshair_1; cl_crosshairgap -5.5; cl_crosshairsize 1; cl_crosshairstyle 4"
-alias "crosshair_1" "alias crosshair_atual crosshair_1; alias crosshair_mudar crosshair_2; cl_crosshairgap -1; cl_crosshairsize 2; cl_crosshairstyle 4"
-alias "crosshair_2" "alias crosshair_atual crosshair_2; alias crosshair_mudar crosshair_1; cl_crosshairgap -2; cl_crosshairsize 1; cl_crosshairstyle 4"
-alias "crosshair_smoke" "cl_crosshairgap -7;cl_crosshairsize 4000;cl_crosshairstyle 5;"
-alias "crosshair_atual" "crosshair_1"
+//alias "crosshair_1" "alias crosshair_atual crosshair_1; alias crosshair_mudar crosshair_2; cl_crosshairgap -1; cl_crosshairsize 2; cl_crosshairstyle 4"
+//alias "crosshair_2" "alias crosshair_atual crosshair_2; alias crosshair_mudar crosshair_1; cl_crosshairgap -2; cl_crosshairsize 1; cl_crosshairstyle 4"
+//alias "crosshair_smoke" "cl_crosshairgap -7;cl_crosshairsize 4000;cl_crosshairstyle 5;"
+//alias "crosshair_atual" "crosshair_1"
 
 //Alias Mira Smoke
-alias "+crosshair_smoke" "crosshair_smoke"
-alias "-crosshair_smoke" "crosshair_atual"
+//alias "+crosshair_smoke" "crosshair_smoke"
+//alias "-crosshair_smoke" "crosshair_atual"
 
 // Bind da mira da Smoke
 // bind "MOUSE5" "+crosshair_smoke"
 
 // Bind para alternar entre a mira 1 e 2
-bind "MOUSE3" "crosshair_mudar"
+//bind "MOUSE3" "crosshair_mudar"
 
 // Alias para configurar a mudança de mira do Q
-alias "crosshairSlot1" "slot1; crosshair_1"
-alias "crosshairSlot2" "slot2; crosshair_2"
+//alias "crosshairSlot1" "slot1; crosshair_1"
+//alias "crosshairSlot2" "slot2; crosshair_2"
 
 // Sempre que clicar para selecionar a arma ele muda para mira 1
-bind "1" "crosshairSlot1"
+//bind "1" "crosshairSlot1"
 
 // Sempre que clicar para selecionar a pistola ele muda para mira 2
-bind "2" "crosshairSlot2"
+//bind "2" "crosshairSlot2"
 
 // Mudar a mira e a alterar para a ultima arma toda vez que apertar Q
-alias "crosshairLasInfo" "lastinv; crosshair_mudar;"
-bind "q" "crosshairLasInfo"
+//alias "crosshairLasInfo" "lastinv; crosshair_mudar;"
+//bind "q" "crosshairLasInfo"
 
 // Executar Configurações da crosshair_1
-echo "- Ativando Mira Padrão 1"
-crosshair_1
+//echo "- Ativando Mira Padrão 1"
+//crosshair_1
 
 // Fps Background 
 engine_no_focus_sleep "0"
@@ -210,6 +212,10 @@ bind "v" "player_ping"
 
 // Cor cinza lobby
 cl_color 255 255 255
+
+// Pular Mouse
+bind "MWHEELUP" "+jump"
+bind "MWHEELDOWN" "+jump"
 
 // Binds VR
 alias "VRkey1a" "say www.twitch.tv/botecovr"
@@ -282,8 +288,8 @@ alias "VRkey14b" "say_team Tá jogando bem demais! Só precisa trabalhar teampla
 alias "VRkey14k1" "bind KP_MINUS VRkey14a"
 alias "VRkey14k2" "bind KP_MINUS VRkey14b"
 
-alias "VRkey15a" "say ♥‿♥"
-alias "VRkey15b" "say ᴇᴜ ꜱᴇɪ qᴜᴇ ᴏ ᴄᴀʀᴀ ᴇꜱᴛᴀ ᴅᴇ ᴡᴀʟʟ ᴩᴏʀqᴜᴇ qᴜᴀɴᴅᴏ ᴇᴜ ᴏʟʜᴏ ᴩᴀʀᴀ ᴇʟᴇ ᴩᴇʟᴀ ᴩᴀʀᴇᴅᴇ ᴇʟᴇ ᴇꜱᴛᴀ ᴍᴇ ᴏʟʜᴀɴᴅᴏ ᴅᴇ ᴠᴏʟᴛᴀ!"
+alias "VRkey15a" "say Quando minha namorada pedir a foto do cacete, vou mandar o replay dessa partida."
+alias "VRkey15b" "say Eu sei que vocês estão de wall, quando eu olho pela parede vocês estão me olhando de volta."
 alias "VRkey15k1" "bind KP_PLUS VRkey15a"
 alias "VRkey15k2" "bind KP_PLUS VRkey15b"
 
