--- a/config.cfg
+++ b/config.cfg
@@ -1,8 +1,8 @@
 cfgver "1"
 unbindall
 bind "0" "slot10"
-bind "1" "crosshairSlot1"
-bind "2" "crosshairSlot2"
+bind "1" "slot1"
+bind "2" "slot2"
 bind "3" "slot3"
 bind "4" "slot4"
 bind "5" "slot5"
@@ -10,10 +10,10 @@ bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
 bind "9" "slot9"
-bind "a" "+moveleft;cl_clanid 39195816"
+bind "a" "+moveleft;cl_clanid 11852271"
 bind "b" "buymenu"
 bind "c" "toggle voice_scale 0.4 0.1"
-bind "d" "+moveright;cl_clanid 39195820"
+bind "d" "+moveright;cl_clanid 11852289"
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
@@ -24,13 +24,13 @@ bind "k" "+voicerecord"
 bind "m" "teammenu"
 bind "n" "+jump;-attack;-jump"
 bind "o" "+bombfind"
-bind "q" "crosshairLasInfo"
+bind "q" "lastinv"
 bind "r" "+reload"
-bind "s" "+back;cl_clanid 39195825"
+bind "s" "+back;cl_clanid 11852305"
 bind "t" "+spray_menu"
 bind "u" "messagemode2"
 bind "v" "player_ping"
-bind "w" "+forward;cl_clanid 39195799"
+bind "w" "+forward;cl_clanid 11852253"
 bind "x" "slot12"
 bind "y" "messagemode"
 bind "z" "radio"
@@ -69,14 +69,66 @@ bind "F8" "toggle safezonex 1 0.75"
 bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE3" "crosshair_mudar"
+bind "MOUSE3" "player_ping"
 bind "MOUSE4" "+voicerecord"
-bind "MWHEELUP" "invprev"
-bind "MWHEELDOWN" "invnext"
+bind "MWHEELUP" "+jump"
+bind "MWHEELDOWN" "+jump"
 @panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
+aim_flickstick_circular_deadzone_max "0.94"
+aim_flickstick_circular_deadzone_min "0.74"
+aim_flickstick_crank_sensitivity "1.0"
+aim_flickstick_crank_tightness "0.8"
+aim_flickstick_enabled "0"
+aim_flickstick_flick_snap_mode "2"
+aim_flickstick_flick_tightness "0.6"
+aim_flickstick_forward_deadzone "7.0"
+aim_flickstick_release_dampen_speed "2.0f"
+aim_gyro_acceleration "1"
+aim_gyro_base_sensitivity "2.5"
+aim_gyro_circular_deadzone "0.0"
+aim_gyro_conversion_mode "0"
+aim_gyro_high_sense_multiplier "2.0"
+aim_gyro_high_sense_speed "360.0"
+aim_gyro_invert_pitch "0"
+aim_gyro_invert_yaw "0"
+aim_gyro_low_sense_speed "7.5"
+aim_gyro_pitchyaw_ratio "0.5"
+aim_gyro_precision_speed "0.75"
+aim_gyro_raw "0"
+aim_gyro_ray_angle "-45"
+aim_gyro_siapi_pixel_to_angle_ratio "2550.0"
+aim_gyro_siapi_sensitivity "1.0"
+aim_gyro_square_deadzone_pitch "0.0"
+aim_gyro_square_deadzone_yaw "0.0"
+aim_gyro_zoom_dampening_level1 "0.8"
+aim_gyro_zoom_dampening_level2 "0.6"
+aim_stick_circular_deadzone_max "0.94"
+aim_stick_circular_deadzone_min "0.17"
+aim_stick_extra_pitch "50.0"
+aim_stick_extra_turning_delay "0.0"
+aim_stick_extra_turning_ramp_up_time "0.5"
+aim_stick_extra_yaw "60.0"
+aim_stick_invert_pitch "0"
+aim_stick_invert_yaw "0"
+aim_stick_rate_pitch "125.0"
+aim_stick_rate_yaw "165.0"
+aim_stick_response_curve "1.6"
+aim_stick_square_deadzone_pitch "0.0"
+aim_stick_square_deadzone_yaw "0.0"
+aim_stick_zoom_dampening_level1 "0.8"
+aim_stick_zoom_dampening_level2 "0.6"
+aim_touchpad_circular_deadzone_min "0.0"
+aim_touchpad_invert_pitch ""
+aim_touchpad_invert_yaw ""
+aim_touchpad_sensitivity_pitch "20.0"
+aim_touchpad_sensitivity_yaw "21.0"
+aim_touchpad_square_deadzone_pitch "0.0"
+aim_touchpad_square_deadzone_yaw "0.0"
+aim_touchpad_zoom_dampening_level1 "0.8"
+aim_touchpad_zoom_dampening_level2 "0.6"
 budget_averages_window "30"
 budget_background_alpha "128"
 budget_bargraph_background_alpha "128"
@@ -107,8 +159,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1634081298"
-cachedvalue_count_teammates "1634081283"
+cachedvalue_count_partybrowser "1653876756"
+cachedvalue_count_teammates "1653876767"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -136,7 +188,7 @@ cl_buywheel_nomousecentering "0"
 cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "0"
+cl_clanid "11852289 14"
 cl_cmdrate "128"
 cl_color "255 255 255"
 cl_compass_enabled "1"
@@ -156,17 +208,17 @@ cl_crosshaircolor_b "50"
 cl_crosshaircolor_g "250"
 cl_crosshaircolor_r "50"
 cl_crosshairdot "0"
-cl_crosshairgap "-1"
+cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "2"
+cl_crosshairsize "1"
 cl_crosshairstyle "4"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
-cl_detail_avoid_force "0"
-cl_detail_avoid_radius "0"
-cl_detail_avoid_recover_speed "0"
-cl_detail_max_sway "0"
+cl_detail_avoid_force "0.4"
+cl_detail_avoid_radius "64"
+cl_detail_avoid_recover_speed "0.25"
+cl_detail_max_sway "5"
 cl_disable_round_end_report "0"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "0"
@@ -187,6 +239,8 @@ cl_hud_playercount_pos "0"
 cl_hud_playercount_showcount "0"
 cl_hud_radar_scale "1"
 cl_idealpitchscale "0.8"
+cl_inventory_radial_immediate_select "1"
+cl_inventory_radial_tap_to_cycle "1"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
 cl_invites_only_friends "0"
@@ -206,6 +260,7 @@ cl_ping_fade_distance "300"
 cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
 cl_promoted_settings_acknowledged "1:1571850214255"
+cl_quickinventory_filename "radial_quickinventory.txt"
 cl_quickinventory_lastinv "1"
 cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "1"
@@ -237,8 +292,9 @@ cl_radial_radio_tab_2_text_5 "#Chatwheel_cheer"
 cl_radial_radio_tab_2_text_6 "#Chatwheel_peptalk"
 cl_radial_radio_tab_2_text_7 "#Chatwheel_sorry"
 cl_radial_radio_tab_2_text_8 "#Chatwheel_sectorclear"
+cl_radial_radio_tap_to_ping "1"
 cl_radial_radio_version_reset "12"
-cl_radialmenu_deadzone_size "0.04"
+cl_radialmenu_deadzone_size_joystick "0.17"
 cl_righthand "0"
 cl_rumblescale "1.0"
 cl_sanitize_player_names "0"
@@ -251,7 +307,7 @@ cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "0"
+cl_spec_mode "5"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
 cl_teammate_colors_show "1"
@@ -330,7 +386,7 @@ joystick "1"
 joystick_force_disabled "1"
 joystick_force_disabled_set_from_options "1"
 key_bind_version "5"
-lobby_default_privacy_bits2 "0"
+lobby_default_privacy_bits2 "1"
 lockMoveControllerRet "0"
 lookspring "0"
 lookstrafe "0"
@@ -361,6 +417,18 @@ mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "25"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
+move_stick_aggression_strength "60.0"
+move_stick_aggressive "1"
+move_stick_circular_deadzone_max "0.98"
+move_stick_circular_deadzone_min "0.17"
+move_stick_response_curve "2.0"
+move_stick_square_deadzone_forward "0.0"
+move_stick_square_deadzone_strafe "0.0"
+move_touchpad_circular_deadzone_min "0.1"
+move_touchpad_sensitivity_forward "1.0"
+move_touchpad_sensitivity_strafe "1.0"
+move_touchpad_square_deadzone_forward "0.2"
+move_touchpad_square_deadzone_strafe "0.2"
 muzzleflash_light "1"
 name "Rospirski"
 net_allow_multicast "1"
@@ -385,12 +453,12 @@ option_speed_method "0"
 password "GC8854"
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_10_1_8B1DA40F "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_de_ravine,mg_de_extraction,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
-player_competitive_maplist_8_10_1_62D24D31 "mg_lobby_mapveto,mg_de_mirage,mg_de_inferno,mg_de_overpass,mg_de_vertigo,mg_de_nuke,mg_de_ancient,mg_de_dust2,mg_de_train,mg_de_cache,mg_cs_agency,mg_cs_office,mg_de_basalt,mg_cs_insertion2"
+player_competitive_maplist_2v2_10_0_F88E9A71 "mg_de_vertigo,mg_de_inferno,mg_de_overpass,mg_de_cbble,mg_de_shortdust"
+player_competitive_maplist_8_10_0_A1BE4499 "mg_de_inferno,mg_de_overpass,mg_de_vertigo"
 player_nevershow_communityservermessage "0"
-player_survival_list_10_1_13 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_county"
-player_teamplayedlast "3"
-player_wargames_list2_10_1_E04 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition,mg_skirmish_retakes"
+player_survival_list_10_0_303 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_vineyard,mg_dz_ember"
+player_teamplayedlast "2"
+player_wargames_list2_10_0_E04 "mg_skirmish_retakes"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "1"
@@ -402,17 +470,13 @@ r_eyeshift_z "0"
 r_eyesize "0"
 r_player_visibility_mode "1"
 rate "786432"
-safezonex "1.0"
+safezonex "0.75"
 safezoney "1.0"
-sc_enable "1.0"
-sc_joystick_map "1"
-sc_pitch_sensitivity "1.0"
-sc_yaw_sensitivity "1.0"
 scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1.80"
+sensitivity "2"
 sk_autoaim_mode "1"
 skill "1"
 snd_deathcamera_volume "0.007150"
@@ -430,7 +494,7 @@ snd_menumusic_volume "0.010265"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.025"
-snd_music_selection "1"
+snd_music_selection "2"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.010385"
 snd_mute_losefocus "0"
@@ -446,6 +510,11 @@ spec_replay_autostart "1"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
 ss_splitmode "0"
+steaminput_default_glyphstyle "1"
+steaminput_default_neutral "1"
+steaminput_default_solid "1"
+steaminput_firsttimepopup "0"
+steaminput_glyph_display_mode "0"
 store_version "1"
 suitvolume "0.25"
 sv_forcepreload "0"
@@ -458,7 +527,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_urb01"
+sv_skyname "sky_dust"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -482,41 +551,41 @@ ui_deepstats_radio_heat_tab "0"
 ui_deepstats_radio_heat_team "0"
 ui_deepstats_toplevel_mode "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_mainmenu_bkgnd_movie_53A07E69 "county"
+ui_mainmenu_bkgnd_movie_EB8697C1 "ancient"
 ui_nearbylobbies_filter3 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2021/09/35481/"
-ui_playsettings_custom_preset "mg_de_mirage,mg_de_inferno,mg_de_overpass,mg_de_vertigo,mg_de_nuke,mg_de_ancient,mg_de_dust2,mg_de_train,mg_de_cache,mg_cs_agency,mg_cs_office,mg_de_basalt,mg_cs_insertion2"
-ui_playsettings_directchallengekey ""
+ui_news_last_read_link "https://blog.counter-strike.net/pt-br/index.php/2022/05/38333/"
+ui_playsettings_custom_preset "mg_de_vertigo,mg_de_inferno,mg_de_overpass"
+ui_playsettings_directchallengekey "SB8BF-Q4GE-A33C7-JKKQ"
 ui_playsettings_flags_listen_casual "0"
-ui_playsettings_flags_listen_competitive "0"
+ui_playsettings_flags_listen_competitive "16"
 ui_playsettings_flags_listen_cooperative "0"
 ui_playsettings_flags_listen_deathmatch "0"
 ui_playsettings_flags_listen_scrimcomp2v2 "0"
 ui_playsettings_flags_listen_skirmish "0"
 ui_playsettings_flags_listen_survival "0"
 ui_playsettings_flags_official_casual "0"
-ui_playsettings_flags_official_competitive "0"
+ui_playsettings_flags_official_competitive "16"
 ui_playsettings_flags_official_cooperative "0"
-ui_playsettings_flags_official_deathmatch "0"
+ui_playsettings_flags_official_deathmatch "32"
 ui_playsettings_flags_official_scrimcomp2v2 "0"
 ui_playsettings_flags_official_skirmish "0"
 ui_playsettings_flags_official_survival "0"
 ui_playsettings_maps_listen_casual "random_classic"
-ui_playsettings_maps_listen_competitive "mg_de_mirage"
+ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
 ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
 ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
 ui_playsettings_maps_official_casual "mg_casualsigma"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
-ui_playsettings_maps_workshop "@workshop/308490450/xhair_v3"
-ui_playsettings_mode_listen "competitive"
-ui_playsettings_mode_official_v20 "competitive"
+ui_playsettings_maps_workshop ""
+ui_playsettings_mode_listen "casual"
+ui_playsettings_mode_official_v20 "scrimcomp2v2"
 ui_playsettings_prime "1"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
-ui_popup_weaponupdate_version "2109"
+ui_popup_weaponupdate_version "2"
 ui_setting_advertiseforhire_auto "1"
-ui_setting_advertiseforhire_auto_last "/competitive"
+ui_setting_advertiseforhire_auto_last "competitive"
 ui_show_subscription_alert "1"
 ui_show_unlock_competitive_alert ""
 ui_steam_overlay_notification_position "topleft"
@@ -539,7 +608,7 @@ voice_mixer_mute "0"
 voice_mixer_volume "0.6"
 voice_modenable "1"
 voice_positional "0"
-voice_scale "0.04"
+voice_scale "0.4"
 voice_system_enable "1"
 voice_threshold "4000"
 volume "0.6"
